# interview-agent

./: .gitignore  AGENTS.md  README.md  TODO.md  ruff.toml
services/google-agent/: .env.example  .gitignore  AGENTS.md  README.md  __init__.py  agent.py  agent_executor.py  main.py  pyproject.toml  utils.py
services/google-agent/google_agent/: __init__.py  __main__.py  executor.py  session.py  toolset.py
services/google-agent/google_agent/tools/: coding_toolset.py  design_toolset.py
services/google-agent/tests/: test_executor.py  test_toolset.py
services/google-agent/tools/: __init__.py  interview_tools.py  payment_tools.py
services/interview-agent/: .env.example  AGENTS.md  README.md  pyproject.toml
services/interview-agent/interview_agent/: .env.example  __init__.py  agent.py  root.py  root_agent.py
services/interview-agent/interview_agent/interview_types/: __init__.py  interview_factory.py
services/interview-agent/interview_agent/interview_types/system_design/: company_factory.py  main_agent.py  orchestrator.py  phase_agent.py  system_design_agent.py
services/interview-agent/interview_agent/shared/: callbacks.py  constants.py
services/interview-agent/interview_agent/shared/agent_providers/: local_provider.py  protocol.py  registry.py
services/interview-agent/interview_agent/shared/agents/: closing_agent.py  intro_agent.py
services/interview-agent/interview_agent/shared/factories/: company_factory.py  interview_factory.py
services/interview-agent/interview_agent/shared/plugins/: logging_plugin.py
services/interview-agent/interview_agent/shared/prompts/: closing_agent.txt  intro_agent.txt  phase_agent.txt  prompt_loader.py  routing_agent.txt
services/interview-agent/interview_agent/shared/schemas/: __init__.py  routing_decision.py
services/interview-agent/tests/: __init__.py  conftest.py  test_agent.py  test_root.py  test_root_agent.py
services/interview-agent/tests/integration/: README.md  llm_recorder.py  mock_tools.py  test_e2e_interview.py  test_helpers.py  test_interview_flow.py
services/interview-agent/tests/integration/providers/: mock_amazon_tools.py  mock_remote_agent.py
services/interview-agent/tests/integration/recording/: test_design_phase_free_default.json  test_design_phase_paid_remote.json  test_e2e_interview_free_default.json  test_e2e_interview_paid_remote.json  test_intro_and_candidate_info.json  test_routing_decision_free_default.json  test_routing_decision_paid_remote.json
services/interview-agent/tests/integration/recordings/: test_complete_interview_journey.json  test_full_interview_flow.json
services/interview-agent/tests/interview_types/: test_interview_factory.py
services/interview-agent/tests/interview_types/system_design/: __init__.py  test_company_factory.py  test_main_agent.py  test_orchestrator.py  test_phase_agent.py  test_system_design_agent.py
services/interview-agent/tests/shared/agent_providers/: __init__.py  test_local_provider.py  test_registry.py  test_remote_provider.py
services/interview-agent/tests/shared/agents/: test_closing_agent.py  test_intro_agent.py
services/interview-agent/tests/shared/factories/: test_company_factory.py  test_interview_factory.py
services/interview-orchestrator/: .env.example  AGENTS.md  README.md  TODO.md  pyproject.toml
services/interview-orchestrator/interview_orchestrator/: __init__.py  __main__.py  root_agent.py  server.py
services/interview-orchestrator/interview_orchestrator/agents/: closing.py  interview.py  intro.py  routing.py
services/interview-orchestrator/interview_orchestrator/agents/interview_types/: builder.py  coding.py  design.py
services/interview-orchestrator/interview_orchestrator/interview_types/: __init__.py
services/interview-orchestrator/interview_orchestrator/interview_types/system_design/: design_agent_tool.py  orchestrator.py  system_design_agent.py
services/interview-orchestrator/interview_orchestrator/shared/: agent_registry.py  constants.py  remote_client.py  session_store.py
services/interview-orchestrator/interview_orchestrator/shared/agent_providers/: __init__.py  registry.py  remote_provider.py
services/interview-orchestrator/interview_orchestrator/shared/agents/: closing_agent.py  intro_agent.py
services/interview-orchestrator/interview_orchestrator/shared/factories/: __init__.py
services/interview-orchestrator/interview_orchestrator/shared/plugins/: __init__.py
services/interview-orchestrator/interview_orchestrator/shared/prompts/: design_phase.txt  intro_agent.txt  phase_agent.txt  prompt_loader.py  routing_agent.txt
services/interview-orchestrator/interview_orchestrator/shared/tools/: __init__.py  closing_tools.py  intro_tools.py  routing_tools.py
services/interview-orchestrator/interview_orchestrator/websocket/: __init__.py  agent_to_client.py  app.py  client_to_agent.py  events.py  session.py
services/interview-orchestrator/tests/: conftest.py  test_root_agent.py  test_server.py
services/interview-orchestrator/tests/integration/: test_e2e_interview.py  test_helpers.py  test_interview_flow.py  test_single_agent_flow.py
services/interview-orchestrator/tests/integration/providers/: __init__.py
services/interview-orchestrator/tests/integration/recording/: test_intro_and_candidate_info.json  test_routing_decision_free_default.json  (+1 more)
services/interview-orchestrator/tests/interview_types/: __init__.py
services/interview-orchestrator/tests/unit/: test_coding_tools.py  test_design_tools.py  test_intro_tools.py  test_routing_tools.py
services/meta-agent/: .env.example  AGENTS.md  README.md  __init__.py  agent.py  pyproject.toml
services/meta-agent/meta_agent/: .env.example  __init__.py  __main__.py  agent.py  executor.py  toolset.py
services/meta-agent/meta_agent/tools/: base.py  design_toolset.py
services/meta-agent/tests/: test_agent.py  test_executor.py  test_toolset.py
tests/: .gitignore  pyproject.toml
tests/canvas_data/: code_implementation.txt
tests/e2e/: README.md  a2a_helper.py  conftest.py  test_full_interview.py  test_orchestrator_websocket.py  websocket_helper.py
(+148 files in other folders)
